# winelist-generator

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  testdata.csv
src/: main.rs  testdata.csv
