[package]
name = "winelist-generator"
version = "0.1.0"
edition = "2021"
description = "Auto generates PDF winelist from cellartracker data"

[dependencies]
csv = "1.3.0"
failure = "0.1.8"
latex = "0.3.1"
pandoc = "0.8.11"
reqwest = "0.12.8"
rocket = "0.5.1"

[[bin]]
name = "winelistgen"
path = "src/main.rs"
